--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -45,9 +45,10 @@ a img {
 
 .calculator {
   position: relative;
-  width: 360px;
-  height: 580px;
+  max-width: 360px;
+  max-height: 580px;
   padding: 20px;
+  margin: 20px;
   border-radius: 10px;
   background-color: #121212;
   box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.3);
