--- a/src/Components/buttons.css
+++ b/src/Components/buttons.css
@@ -2,8 +2,8 @@
   margin: 50px auto 100px auto;
   width: 600px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 50px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 2rem;
   place-items: center;
   align-content: center;
   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
@@ -11,6 +11,13 @@
   -ms-animation: fadein 2s; /* Internet Explorer */
   -o-animation: fadein 2s; /* Opera < 12.1 */
   animation: fadein 2s;
+}
+
+@media only screen and (max-width: 600px) {
+  .buttons {
+    /* grid-template-columns: repeat(1, 1fr); */
+    width: 100%;
+  }
 }
 
 .buttons a {
