--- a/src/Components/timeline.css
+++ b/src/Components/timeline.css
@@ -54,3 +54,10 @@
   font-family: "Montserrat";
   font-size: 20px;
 }
+
+@media only screen and (max-width: 600px) {
+  .timeline {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
