--- a/src/Components/careersearch.css
+++ b/src/Components/careersearch.css
@@ -1,13 +1,18 @@
-h3 {
+.hero h3 {
   font-family: "Montserrat";
   color: black;
   font-size: 40px;
   margin: 30px auto;
+  margin-bottom: 0px;
   letter-spacing: 0.1em;
   font-weight: 600;
   text-align: center;
   width: 50%;
   text-shadow: 0px 0px 2px #fe637f;
+}
+
+p{
+  text-align: center;
 }
 
 @media only screen and (max-width: 600px) {
@@ -18,4 +23,22 @@ h3 {
     padding: 10px;
     text-shadow: none;
   }
+}
+
+.contact {
+  font-family: "Montserrat";
+  text-align: center;
+  font-size: 20px;
+  margin-top: 30px;
+}
+
+.contact a {
+  color: #fe0b55;
+  font-weight: 600;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.contact a:hover {
+  font-size: 24px;
 }
