--- a/src/Components/skills.css
+++ b/src/Components/skills.css
@@ -12,6 +12,19 @@
   animation: fadein 2s;
 }
 
+.skillsection h3 {
+  font-family: "Montserrat";
+  color: black;
+  font-size: 40px;
+  margin: 30px auto;
+  margin-bottom: 0px;
+  letter-spacing: 0.1em;
+  font-weight: 600;
+  text-align: center;
+  width: 50%;
+  text-shadow: 0px 0px 2px #fe637f;
+}
+
 @media only screen and (max-width: 600px) {
   .skills {
     width: 80%;
