--- a/src/Components/buttons.css
+++ b/src/Components/buttons.css
@@ -1,11 +1,10 @@
 .buttons {
   margin: 50px auto 100px auto;
   width: 600px;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 2rem;
-  place-items: center;
-  align-content: center;
+  display: flex;
+  
+  align-items: center;
+  justify-content: center;
   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 2s; /* Firefox < 16 */
   -ms-animation: fadein 2s; /* Internet Explorer */
